# OpenOSD-X_Bootloader

./: CMakeLists.txt  LICENSE.md  README.md  README_jp.md
.github/workflows/: build.yml
STM32CubeIDE/: .cproject  .project  STM32G431_FLASH.ld
STM32CubeIDE/Debug/: makefile  sources.mk
STM32CubeIDE/Debug/Application/Core/: main.cyclo  stm32g4xx_hal_msp.cyclo  stm32g4xx_it.cyclo  subdir.mk
STM32CubeIDE/Debug/Application/OpenBootloader/App/: app_openbootloader.cyclo  subdir.mk
STM32CubeIDE/Debug/Application/Startup/: subdir.mk
STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32g4xx.cyclo
STM32CubeIDE/Debug/Drivers/STM32G4xx_HAL_Driver/: stm32g4xx_hal.cyclo  stm32g4xx_hal_cortex.cyclo  stm32g4xx_hal_crc.cyclo  stm32g4xx_hal_crc_ex.cyclo  stm32g4xx_hal_dma.cyclo  stm32g4xx_hal_flash.cyclo  stm32g4xx_hal_flash_ex.cyclo  stm32g4xx_hal_flash_ramfunc.cyclo  stm32g4xx_hal_gpio.cyclo  stm32g4xx_hal_i2c.cyclo  stm32g4xx_hal_i2s.cyclo  stm32g4xx_hal_iwdg.cyclo  stm32g4xx_hal_pcd.cyclo  stm32g4xx_hal_pcd_ex.cyclo  stm32g4xx_hal_pwr.cyclo  stm32g4xx_hal_pwr_ex.cyclo  stm32g4xx_hal_rcc.cyclo  stm32g4xx_hal_rcc_ex.cyclo  stm32g4xx_hal_spi.cyclo  stm32g4xx_hal_spi_ex.cyclo  stm32g4xx_hal_usart.cyclo  stm32g4xx_hal_usart_ex.cyclo  stm32g4xx_ll_i2c.cyclo  stm32g4xx_ll_rcc.cyclo  stm32g4xx_ll_spi.cyclo  stm32g4xx_ll_usart.cyclo  stm32g4xx_ll_usb.cyclo  subdir.mk
STM32CubeIDE/Debug/Middlewares/OpenBootloader/Core/: openbl_core.cyclo  subdir.mk
STM32CubeIDE/Debug/Middlewares/OpenBootloader/Modules/I2C/: openbl_i2c_cmd.cyclo  subdir.mk
STM32CubeIDE/Debug/Middlewares/OpenBootloader/Modules/MEM/: openbl_mem.cyclo  subdir.mk
STM32CubeIDE/Debug/Middlewares/OpenBootloader/Modules/USART/: openbl_usart_cmd.cyclo  subdir.mk
Src/: STM32G431KBTX_FLASH.ld
Src/Core/Inc/: led.h
Src/Core/Src/: led.c  main.c
Src/Middlewares/ST/OpenBootloader/Core/: openbl_core.c  openbl_core.h
Src/Middlewares/ST/OpenBootloader/Modules/USART/: openbl_usart_cmd.c
Src/OpenBootloader/App/: app_openbootloader.c  startup_stm32g431kbtx.s
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32g4xx/: CMakeLists.txt
